# taos_odbc

./: CMakeLists.txt  README.cn.md  README.md
cmake/: deps_CMakeLists.txt.in  macros.cmake
common/: CMakeLists.txt  auxiliary.c  strptime.c
contrib/: CMakeLists.txt
contrib/deps-download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
contrib/deps-download/cjson-prefix/src/cjson-stamp/: cjson-gitinfo.txt
contrib/deps-download/cjson-prefix/tmp/: cjson-gitclone.cmake  cjson-gitupdate.cmake  cjson-mkdirs.cmake
contrib/deps-download/crashdump-prefix/src/crashdump-stamp/: crashdump-gitinfo.txt
contrib/deps-download/crashdump-prefix/tmp/: crashdump-gitclone.cmake  crashdump-gitupdate.cmake  crashdump-mkdirs.cmake
contrib/deps-download/iconv-prefix/src/iconv-stamp/: iconv-gitclone-lastrun.txt
contrib/deps-download/iconv-prefix/tmp/: iconv-gitclone.cmake  iconv-gitupdate.cmake  iconv-mkdirs.cmake
contrib/deps-download/libuv-prefix/src/libuv-stamp/: libuv-gitclone-lastrun.txt
contrib/deps-download/libuv-prefix/tmp/: libuv-gitclone.cmake  libuv-gitupdate.cmake  libuv-mkdirs.cmake
contrib/deps-download/lz4-prefix/src/lz4-stamp/: lz4-gitclone-lastrun.txt
contrib/deps-download/lz4-prefix/tmp/: lz4-gitclone.cmake  lz4-gitupdate.cmake  lz4-mkdirs.cmake
contrib/deps-download/msvcregex-prefix/src/msvcregex-stamp/: msvcregex-gitclone-lastrun.txt
contrib/deps-download/msvcregex-prefix/tmp/: msvcregex-gitclone.cmake  msvcregex-gitupdate.cmake  msvcregex-mkdirs.cmake
contrib/deps-download/pthread-prefix/src/pthread-stamp/: pthread-gitclone-lastrun.txt
contrib/deps-download/pthread-prefix/tmp/: pthread-gitclone.cmake  pthread-gitupdate.cmake  pthread-mkdirs.cmake
contrib/deps-download/wcwidth-prefix/src/wcwidth-stamp/: wcwidth-gitclone-lastrun.txt
contrib/deps-download/wcwidth-prefix/tmp/: wcwidth-gitclone.cmake  wcwidth-gitupdate.cmake  wcwidth-mkdirs.cmake
contrib/deps-download/wingetopt-prefix/src/wingetopt-stamp/: wingetopt-gitclone-lastrun.txt
contrib/deps-download/wingetopt-prefix/tmp/: wingetopt-gitclone.cmake  wingetopt-gitupdate.cmake  wingetopt-mkdirs.cmake
contrib/deps-download/zlib-prefix/src/zlib-stamp/: zlib-gitinfo.txt
contrib/deps-download/zlib-prefix/tmp/: zlib-gitclone.cmake  zlib-gitupdate.cmake  zlib-mkdirs.cmake
inc/: enums.h  helpers.h
src/: CMakeLists.txt  dsn.c  odbc.c
src/core/: CMakeLists.txt  conn.c  desc.c  env.c  errs.c  internal.h  stmt.c
src/inc/: conn.h  desc.h  env.h  errs.h  log.h  parser.h  stmt.h  utils.h
taos_odbc_driver/: CMakeLists.txt  taos_odbc_driver.c  taos_odbc_driver.def  taos_odbc_driver.h
taos_odbc_driver/core/: conn.c  desc.c  env.c  errs.c  stmt.c  utils.c
taos_odbc_driver/dsn/: RCa06968  RCa21660  RCa26852  RCa41808  odbc_dsn.aps  odbc_dsn.c  odbc_dsn.rc  platform_win.c  resource.h  taos_odbc_setup.def  td_dsn.c  td_dsn.h
taos_odbc_driver/inc/: conn.h  desc.h  enums.h  env.h  errs.h  internal.h  list.h  parser.h  platform_win.h  stdatomic.h  stmt.h  td_dsn.h  td_legacy_helpers.h  td_odbc.h  td_parse.h  td_platform_win32.h  utils.h
test/: CMakeLists.txt  dsn_test.c  odbc_test.c  taos_test.c
wininstall/: CMakeLists.txt  change_dsns_driver.c  install.cmd  install.rsp
